agregando nuevo filtro por género